<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".BCHMapsActivity">
    <item
        android:id="@+id/empty"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/filter">

        <group android:checkableBehavior="all">
            <item
                android:id="@+id/menu_food"
                android:checkable="true"
                android:icon="@drawable/ic_map_food_old"
                android:title="@string/type_food" />
            <item
                android:id="@+id/menu_sweet"
                android:checkable="true"
                android:icon="@drawable/ic_map_sweet_old"
                android:title="@string/type_sweet" />
            <item
                android:id="@+id/menu_bar"
                android:checkable="true"
                android:icon="@drawable/ic_map_bar_old"
                android:title="@string/type_bar" />
            <item
                android:id="@+id/menu_shops"
                android:checkable="true"
                android:icon="@drawable/ic_map_shop_old"
                android:title="@string/type_super" />
            <item
                android:id="@+id/menu_fashion"
                android:checkable="true"
                android:icon="@drawable/ic_map_basket_old"
                android:title="@string/type_fashion" />
            <item
                android:id="@+id/menu_hotel"
                android:checkable="true"
                android:icon="@drawable/ic_map_hotel_old"
                android:title="@string/type_hotel" />
            <item
                android:id="@+id/menu_others"
                android:checkable="true"
                android:icon="@drawable/ic_map_spa_old"
                android:title="@string/type_spa" />
        </group>
        <item
            android:id="@+id/menu_switch"
            android:title="@string/switch_style" />
        <item
            android:id="@+id/menu_browser"
            android:title="@string/browser" />
        <item
            android:id="@+id/menu_coinector"
            android:title="@string/coinector" />
        <item
            android:id="@+id/menu_bmap"
            android:title="@string/bmap" />
    </item>
</menu>